--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ buildNumber.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,intellij,java
 /.idea/
+/target/
