[#02][Feat][JD] - [configuration JWT]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/WarMarket_DB
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
