Creation of branc Search for save code write about product search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=none
 !spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/WarMarket_DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/warmarket_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
