--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
+#logging.level.ROOT=INFO
+#logging.level.org.springframework.orm.jpa=DEBUG
+#logging.level.org.springframework.transaction=DEBUG
+#logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
