[12][FEAT][BC] - added new packages, Thymeleaf, working on sending mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,14 @@ jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
 #logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+#email settings
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.username=warhammer.market@gmail.com
+spring.mail.password=123WaR456
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
