[#09][Feat][BT] - [add service search]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.jpa.hibernate.ddl-auto=none
 !spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/warmarket_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/WarMarket_DB
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
+#logging.level.ROOT=INFO
+#logging.level.org.springframework.orm.jpa=DEBUG
+#logging.level.org.springframework.transaction=DEBUG
+#logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=DEBUG
