--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.jpa.hibernate.ddl-auto=none
 !spring.datasource.url=jdbc:postgresql://teamramisu.c8jyf5okphi9.eu-west-3.rds.amazonaws.com:5432/WarMarket_DB
 !spring.datasource.username=postgres
 !spring.datasource.password=1ZT46DL2D3
@@ -16,3 +15,6 @@ jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
 #logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+ spring.jpa.hibernate.ddl-auto = update
+
