--- a/pom.xml
+++ b/pom.xml
@@ -92,8 +92,13 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.8</version>
 		</dependency>
-
-    </dependencies>
+<!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+			<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>5.21.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
