Upload Profile picture

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+src/main/resources/static/upload/*
 
 # Created by https://www.toptal.com/developers/gitignore/api/maven,eclipse,intellij,java
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,eclipse,intellij,java
