--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=zdtlD3JK56m6wTTgsNFhqzjqP
+jwt.header=Authorizations
+jwt.expiration=604800
 #logging.level.ROOT=INFO
 #logging.level.org.springframework.orm.jpa=DEBUG
 #logging.level.org.springframework.transaction=DEBUG
