--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,10 @@
             <scope>test</scope>
         </dependency>
      
+     <dependency>
+  <groupId>org.springframework.boot</groupId>            
+  <artifactId>spring-boot-starter-websocket</artifactId>
+</dependency>
 		
 		
 <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
