--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
 		
 		
 		  <!-- test patch operation need this -->
